apps/base/nightscout/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nightscout
  labels:
    homelab.io/app: "true"
    homelab.io/needs-database: "true"
