apps/base/nightscout/nightscout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nightscout
spec:
  selector:
    app: nightscout
  ports:
    - port: 1337
      targetPort: 1337
